# veyon

./: .gitmodules  CMakeLists.txt
.ci/linux.debian.11/: Dockerfile
.ci/linux.debian.12/: Dockerfile
.ci/linux.fedora.43/: Dockerfile
.ci/linux.fedora.44/: Dockerfile
.ci/linux.opensuse.leap.16.0/: Dockerfile
.ci/linux.opensuse.tumbleweed/: Dockerfile
.ci/linux.rhel.10/: Dockerfile
.ci/linux.rhel.8/: Dockerfile
.ci/linux.rhel.9/: Dockerfile
.ci/linux.ubuntu.22.04/: Dockerfile
.ci/windows/: Dockerfile
.github/workflows/: build.yml  release.yml  windows-build.yml  windows-image.yml
.tx/: config
cli/src/: ShellCommands.cpp  main.cpp
cmake/: CPackDefinitions.cmake
cmake/modules/: PchHelpers.cmake  WindowsInstaller.cmake
configurator/src/: AccessControlPage.cpp  AccessControlRuleListModel.cpp  ServiceConfigurationPage.cpp  ServiceConfigurationPage.ui
core/: CMakeLists.txt
core/src/: AccessControlProvider.cpp  CryptoCore.cpp  DesktopAccessDialog.cpp  FeatureManager.cpp  FeatureManager.h  FeatureProviderInterface.h  FeatureWorkerManager.cpp  LockWidget.cpp  LockWidget.h  LockingPointer.h  Logger.cpp  MonitoringMode.cpp  NetworkObjectDirectory.cpp  SystemTrayIcon.cpp  Toast.cpp  VariantArrayMessage.cpp  VariantStream.cpp  VariantStream.h  VeyonConfiguration.cpp  VeyonConfigurationProperties.h  VeyonConnection.cpp  VncClientProtocol.cpp  VncClientProtocol.h  VncConnection.cpp  VncConnection.h  VncServerProtocol.cpp  VncView.cpp  VncView.h
deploy/windows/: veyon-client-setup.ps1
master/src/: ComputerControlListModel.cpp  ComputerItemDelegate.cpp  ComputerMonitoringWidget.cpp  ComputerMonitoringWidget.h  ComputerZoomWidget.cpp  MainWindow.cpp
plugins/: CMakeLists.txt
plugins/crashreport/: CMakeLists.txt  CrashHandler.cpp  CrashHandler.h  CrashReportPlugin.cpp  CrashReportPlugin.h
plugins/demo/: DemoClient.cpp  DemoServer.cpp
plugins/desktopservices/: DesktopServicesFeaturePlugin.cpp
plugins/exammode/: CMakeLists.txt  ExamModeFeaturePlugin.cpp  ExamModeFeaturePlugin.h  ExamModeLinuxExecGuard.cpp  ExamModeLinuxExecGuard.h  ExamModeProfile.cpp  ExamModeProfile.h  ExamModeProfileTest.cpp  ExamModeSession.cpp  ExamModeSession.h  ExamModeSessionTest.cpp  ExamModeVdiClient.cpp  ExamModeVdiClient.h  ExamModeWindowsNative.cpp  ExamModeWindowsNative.h  README.md
plugins/filetransfer/: FileReadThread.cpp  FileTransferController.cpp  FileTransferDialog.cpp  FileTransferPlugin.cpp  FileTransferPlugin.h
plugins/ldap/: LdapClient.cpp
plugins/platform/common/: PlatformSessionManager.cpp  ServiceDataManager.cpp
plugins/platform/linux/: InputBlockHelper.cpp  LinuxCoreFunctions.cpp  LinuxInputDeviceFunctions.cpp  LinuxKeyboardInput.cpp  LinuxServiceCore.cpp  LinuxServiceCore.h
plugins/platform/linux/input-helper/: input-block-helper.c
plugins/platform/windows/: CMakeLists.txt  WindowsCoreFunctions.cpp  WindowsNetworkFunctions.cpp  WindowsServiceControl.cpp  WindowsUserFunctions.cpp  XEventLog.cpp
plugins/remoteaccess/: RemoteAccessFeaturePlugin.cpp
plugins/screenlock/: ScreenLockFeaturePlugin.cpp  ScreenLockFeaturePlugin.h
plugins/screenshot/: ScreenshotFeaturePlugin.cpp
plugins/survey/: CMakeLists.txt  SurveyPlugin.cpp  SurveyPlugin.h  SurveyStudentDialog.cpp  SurveyStudentDialog.h  SurveyStudentDialog.ui
plugins/textmessage/: TextMessageDialog.cpp  TextMessageDialog.h  TextMessageDialog.ui  TextMessageFeaturePlugin.cpp  TextMessageFeaturePlugin.h
plugins/vncserver/ultravnc-builtin/: UltraVncConfiguration.h
plugins/webapi/: CMakeLists.txt  README.md  WebApiConfiguration.h  WebApiConfigurationPage.ui  WebApiConnection.cpp  WebApiConnection.h  WebApiController.cpp  WebApiController.h  WebApiHttpServer.cpp  WebApiHttpServer.h  WebApiPlugin.cpp  WebApiVncBridge.cpp  WebApiVncBridge.h  WebApiWebSocketServer.cpp  WebApiWebSocketServer.h  remote-control.html  webapi.qrc
plugins/webapi/python/: README.md
plugins/webapi/python/tests/: test_veyon_webapi.py
plugins/webapi/python/veyon/: __init__.py
server/src/: ComputerControlClient.cpp  ComputerControlServer.cpp  ComputerControlServer.h  ServerAuthenticationManager.cpp  VncProxyConnection.cpp  VncProxyConnection.h  VncProxyServer.cpp  VncProxyServer.h
tests/unit/: CMakeLists.txt  VncProtocolRobustnessTest.cpp
translations/: veyon.ts  veyon_ar.ts  veyon_bg.ts  veyon_ca_ES.ts  veyon_cs.ts  veyon_de.ts  veyon_el.ts  veyon_es_ES.ts  veyon_et.ts  veyon_eu.ts  veyon_fa.ts  veyon_fr.ts  veyon_he.ts  veyon_hu.ts  veyon_id.ts  veyon_it.ts  veyon_ja.ts  veyon_ka.ts  veyon_ko.ts  veyon_lt.ts  veyon_lv.ts  veyon_mn.ts  veyon_nl.ts  veyon_no_NO.ts  veyon_pl.ts  veyon_pt_BR.ts  veyon_pt_PT.ts  veyon_ru.ts  veyon_sl.ts  veyon_sr.ts  veyon_sv.ts  veyon_th.ts  veyon_tr.ts  veyon_uk.ts  veyon_vi.ts  veyon_zh_CN.ts  veyon_zh_TW.ts
